ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-backend
spec:
  defaultBackend:
    service:
      name: hello-world-app
      port:
        number: 80
