ingress-hello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: "*.hello-john.test"
    http:
      paths:
      - backend:
          service:
            name: hello-world-app
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: "*.hello-jane.test"
    http:
      paths:
      - backend:
          service:
            name: hello-world-app
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: hello-john.test
    http:
      paths:
      - backend:
          service:
            name: hello-world-app
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: hello-jane.test
    http:
      paths:
      - backend:
          service:
            name: hello-world-app
            port:
              number: 80
        path: /
        pathType: Prefix
